--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
   <h1>Welcome to visit the sws website.</h1>
   <li>
-  <a href="projects/index.html"><button>our projects</button>
+  <a href="pindex.html"><button>our projects</button>
   <li>
-  </a><a href="projects/index.html"><button>download our softwares</button></a>
+  </a><a href="pindex.html"><button>download our softwares</button></a>
   <body>
 </html>
