--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <a href="projects/index.html"><button>our projects</button>
   <li>
   </a><a href="projects/index.html"><button>download our softwares</button></a>
+  <p>(c) 2108qirui.shao(ryan)</p>
   <body>
 </html>
