--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 
 <html>
 <body>
-  <h1>Welcome to visit the sws website.</h1>
-  <li>
-  <a href="projects/index.html"><button>our projects</button>
-  <li>
-  </a><a href="projects/index.html"><button>download our softwares</button></a>
-  <p>(c) 2108<a href="about.txt">qirui.shao(ryan)</a></p>
+  <h1>GITHUB中国社区比赛2018</h1>
+  <p>通知：
+    github将于本月初举行一次关于打牌程序的代码比赛，可以为C++代码或C语言代码或js代码。有欲望参加者可以将代码发送至swssoftwareshare@gmail.com或swssoftwareshare@139.com或swssoftwareshare@sina.com。并且标注姓名及联系方式（邮箱或github账号）。程序的满分要求如下：1:程序可以通过编译（如不则作废）2:必须发送源代码（如果不发送代码则作废）3:程序可以正确的洗牌并且打牌，还可以让用户输入牌。（一个点一分）4：可以最好的利用牌进行打牌（适当加分或减分）5：打牌只比单张和顺子（如A 2 3 4 5 6 7 8可以出，但2 2 2 3 3不可以出）6：程序由人工审阅，只要提示通俗易懂便可（如果无法辨别程序目的则作废）
+    祝你好运！</p>
   <body>
 </html>
