--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>GITHUB中国社区比赛2018</h1>
   <em>通知：
-   github将于本月初举行一次关于打牌程序的代码比赛，可以为C++代码或C语言代码或js代码。
+   github将于本月举行一次关于打牌程序的代码比赛，可以为C++代码或C语言代码或js代码。
     有欲望参加者可以将代码发送至swssoftwareshare@gmail.com或swssoftwareshare@139.com或swssoftwareshare@sina.com。
     并且标注姓名及联系方式（邮箱或github账号）。程序的满分要求如下：
     1:程序可以通过编译（如不则作废）
@@ -15,6 +15,8 @@
    祝你好运！
   主办方：GITHUB中国社区
   合作方:Softwareshare中国社区
+  比赛时间：2018/5/5 - 2018 6/5
+  结果公布时间:2018/6/10
   </em>
   <hr/>
   <p>(C)2018 GITHUB中国社区</p>
