--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
   <h1>GITHUB中国社区比赛2018</h1>
-  <em>通知：
+  <pre>
+  通知：
    github将于本月举行一次关于打牌程序的代码比赛，可以为C++代码或C语言代码或js代码。
     有欲望参加者可以将代码发送至swssoftwareshare@gmail.com或swssoftwareshare@139.com或swssoftwareshare@sina.com。
     并且标注姓名及联系方式（邮箱或github账号）。程序的满分要求如下：
@@ -17,7 +18,7 @@
   合作方:Softwareshare中国社区
   比赛时间：2018/5/5 - 2018 6/5
   结果公布时间:2018/6/10
-  </em>
+  </pre>
   <hr/>
   <p>(C)2018 GITHUB中国社区</p>
   <body>
