--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
 <html>
+  <head>
+    <title>GITHUB中国赛区比赛2018</title>
+  </head>
 <body>
-  <h1>GITHUB中国社区比赛2018</h1>
+  <h1>GITHUB中国赛区比赛2018</h1>
   <pre>
   通知：
    github将于本月举行一次关于打牌程序的代码比赛，可以为C++代码或C语言代码或js代码。
